--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>bea-website</title>
   <meta name="description" content="bea-website">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
     html,
     body {
@@ -24,7 +26,7 @@
   <bea-website-main></bea-website-main>
 
   <script type="module">
-    import './node_modules/@bea-org/website-main/index.js';
+    import './node_modules/@bea-org/bea-website-main/index.js';
   </script>
 
 </body>
