--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="bea-website">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./node_modules/@bea-org/bea-font/index.css">
   <style>
     html,
     body {
