--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="./node_modules/@bea-org/bea-font/index.css">
+  <link rel="stylesheet" href="./node_modules/@bea-org/bea-color/index.css">
   <style>
     html,
     body {
