--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>bea-website</title>
-  <meta name="description" content="bea-website">
+  <title>Béa ♥ Coming soon</title>
+  <meta name="description" content="Le don (enfin !) facile.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="./node_modules/@bea-org/bea-font/index.css">
