--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
 <body>
   <bea-website-main></bea-website-main>
 
-  <script type="module">
-    import './node_modules/@bea-org/bea-website-main/index.js';
-  </script>
-
+  <script type="module" src="./node_modules/@bea-org/bea-website-main/index.js"></script>
 </body>
 
 </html>
